package com.fachada.cagepa.fachadacagepa.domain.application.dtos;

public record AdminDTO(
    String username,
    String password
) {
}
